added background and tags for work, about and contact

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<background></background>
+<div style="background-color: #300A24;">
+    <app-wallpaper>
+
+    </app-wallpaper>
+    
+    <app-control-pannels>
+
+    </app-control-pannels>
+
+</div>
