--- a/src/app/control-pannels/control-pannels.component.css
+++ b/src/app/control-pannels/control-pannels.component.css
@@ -30,3 +30,20 @@
     background-color: black;
     
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    background-color: gray;
+    margin-top: 6px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    margin-top: -10px;
+    background-color: lightslategray;
+  }
+  
+  .container {
+    padding: 3px 10px;
+  }
