--- a/src/app/control-pannels/control-pannels.component.html
+++ b/src/app/control-pannels/control-pannels.component.html
@@ -10,21 +10,46 @@
     </div>
     <a name="about" >
         <div class="row">
-            <div class="col about">
-                <div class="row justify-content-center">
-                    <!-- <img src="../../assets/python-wall.gif"> -->
-                    <div class="main-pannel col-6 col-md-4">
-                        <h3>YEEt</h3>
+            <div class="col-4">
+                <div class="card">
+                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>John Doe</b></h4> 
+                      <p>Architect & Engineer</p> 
                     </div>
-                    <div class="main-pannel col-6 col-md-3">
-                        <h3>YEEt</h3>
-                    </div>
-                    <div class="main-pannel col-6 col-md-4">
-                        <h3>YEEt</h3>
-                    </div>
-                    
-                </div>
+                  </div>
             </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>John Doe</b></h4> 
+                      <p>Architect & Engineer</p> 
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>John Doe</b></h4> 
+                      <p>Architect & Engineer</p> 
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>John Doe</b></h4> 
+                      <p>Architect & Engineer</p> 
+                    </div>
+                  </div>
+            </div>
+
         </div>
     
     </a>
