--- a/src/app/control-pannels/control-pannels.component.css
+++ b/src/app/control-pannels/control-pannels.component.css
@@ -31,19 +31,29 @@
     
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(220,220,220,0.2);
     transition: 0.3s;
     width: 100%;
-    background-color: gray;
+    background-color: #9e9e9e;
     margin-top: 6px;
+    margin-bottom: 2%;
   }
   
   .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(220,220,220,0.5);
     margin-top: -10px;
     background-color: lightslategray;
   }
   
   .container {
     padding: 3px 10px;
+
   }
+  
+  .underline-gold-center{
+    background-color: gold;
+    height: 5px;
+    width: 35px;
+    /* margin: auto; */
+}
+
