--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark  navbar-expand-lg" style="background-color: #300A24; position: fixed;
                                                         width: 100%; z-index: 999; font-style: oblique; 
                                                         font-weight: 900;">
-    <a class="navbar-brand" href="#"></a>
+    <a class="navbar-brand" routerLink="/test"  routerLinkActive="active"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li id="Work" class="nav-item active">
-                <a class="nav-link" href="/" (click)='changeActive("Work")'><a>WORK</a><span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#work" (click)='changeActive("Work")'><a>WORK</a><span class="sr-only">(current)</span></a>
             </li>
             <li id="About" class="nav-item">
                 <a class="nav-link" href="#about" (click)='changeActive("About")'><a>ABOUT</a></a>
