--- a/src/app/control-pannels/control-pannels.component.css
+++ b/src/app/control-pannels/control-pannels.component.css
@@ -14,7 +14,7 @@
 }
 
 .transition-white{
-    height: 350px;
+    height: 250px;
     width: 100%;
     background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba( 253, 254, 254 ,1.0) );
 
@@ -25,7 +25,7 @@
     background-color: white;
 }
 .contact{
-    height: 1000px;
+    height: 80vh;
     width: 100%;
     background-color: black;
     
