--- a/src/app/control-pannels/control-pannels.component.css
+++ b/src/app/control-pannels/control-pannels.component.css
@@ -20,9 +20,11 @@
 
 }
 .about{
-    height: 600px;
+    /* height: 100%; */
+    min-height: 100vh;
     width: 100%;
     background-color: white;
+    /* margin-bottom: 19%; */
 }
 .contact{
     height: 80vh;
@@ -34,26 +36,93 @@
     box-shadow: 0 4px 8px 0 rgba(220,220,220,0.2);
     transition: 0.3s;
     width: 100%;
-    background-color: #9e9e9e;
+    background-color:  lightslategray;
     margin-top: 6px;
     margin-bottom: 2%;
-  }
+    color: #F0F8FF;
+}
   
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(220,220,220,0.5);
-    margin-top: -10px;
-    background-color: lightslategray;
-  }
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(220,220,220,0.5);
+  margin-top: -10px;
+  background-color:#9e9e9e;
+  color: #F0F8FF;
+}
   
-  .container {
+.container {
     padding: 3px 10px;
-
-  }
+}
   
-  .underline-gold-center{
-    background-color: gold;
-    height: 5px;
-    width: 35px;
-    /* margin: auto; */
+.underline-gold-center{
+  background-color: gold;
+  height: 5px;
+  width: 35px;
+  /* margin: auto; */
+}
+
+.resume-button{
+  margin-top: 16px;
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 100%;
+  display: block;
+  background-color: transparent;
+  border-radius: 30px;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  
+}
+.resume-button:hover{
+  margin-top: 16px;
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 100%;
+  display: block;
+  background-image: linear-gradient( rgba(0, 0, 0, 0), rgba( 212, 175, 55,0.3) );
+  border-radius: 30px;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
